--- a/favicon.html
+++ b/favicon.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>What is SEO?</title>
 <meta description="SEO is search engine optimization. SEO is used to improve website performance on SERPs to get traffi and increase conversion.">
-<link rel="icon" href="https://pwskills.com/images/favicon.ico" type="image/x-icon">
 <meta name="robots" content="index,follow">
   <meta name="keywords" content="seo, google seo, yahoo seo, bing seo">
   <meta name="author" content="Gaurav - SEO Expert">
@@ -35,13 +34,14 @@
     </nav>
   </header>
 
-  <article>
-    <header>
-<h1>What is SEO?</h1>
+<article>
+<header>
+<h1>What is Favicon?</h1>
 </header>
-
+<p>A favicon, short for "favorite icon," is a small, typically square image or icon associated with a website. It is displayed in the browser's address bar, tabs, bookmarks, and other areas to visually represent a particular website. <mark>Favicons serve as a branding element and help users easily identify and distinguish websites when they have multiple tabs open or when bookmarking pages.</mark></p>
+<img src="https://i.ibb.co/dLTCjJf/favicon.png" width="500px" hight="600px">
 <section>
-<p>The full form of SEO is Search Engine Optimization. SEO is basically to optimize your webpage for important and niche-related keywords and get relevant traffic by ranking your webpage on relevant keywords. For eg. For an IAS Coaching Institute in Delhi, "best IAS Coaching in Delhi" would be one of the important keywords to rank for traffic and conversion.</p>
+<p></p>
 </section>
 </article>
 <hr>
