--- a/favicon.html
+++ b/favicon.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>What is SEO?</title>
-<meta description="SEO is search engine optimization. SEO is used to improve website performance on SERPs to get traffi and increase conversion.">
+<meta description="SEO is search engine optimization. SEO is used to improve website performance on SERPs to get traffic and increase conversion.">
 <meta name="robots" content="index,follow">
   <meta name="keywords" content="seo, google seo, yahoo seo, bing seo">
   <meta name="author" content="Gaurav - SEO Expert">
@@ -39,7 +39,7 @@
 <h1>What is Favicon?</h1>
 </header>
 <p>A favicon, short for "favorite icon," is a small, typically square image or icon associated with a website. It is displayed in the browser's address bar, tabs, bookmarks, and other areas to visually represent a particular website. <mark>Favicons serve as a branding element and help users easily identify and distinguish websites when they have multiple tabs open or when bookmarking pages.</mark></p>
-<img src="https://i.ibb.co/dLTCjJf/favicon.png" width="500px" hight="600px">
+<img src="https://i.ibb.co/dLTCjJf/favicon.png" width="500px" height="600px" alt="favicon">
 <section>
 <p></p>
 </section>
